more changes to index.html

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -115,6 +115,67 @@
             </video>
         </div>
       </section>
+      <section>
+        <h3>TITLE</h3>
+        <div>
+            <img src="" alt="IMAGE">
+            <h3>TITLE</h3>
+            <p>TEXT</p>
+        </div>
+        <div>
+            <img src="" alt="IMAGE">
+            <h3>TITLE</h3>
+            <p>TEXT</p>
+        </div>
+        <div>
+            <img src="" alt="IMAGE">
+            <h3>TITLE</h3>
+            <p>TEXT</p>
+        </div>
+        <div>
+            <img src="" alt="IMAGE">
+            <h3>TITLE</h3>
+            <p>TEXT</p>
+        </div>
+        <button>BUTTON</button>
+      </section>
+      <section>
+        <div>
+            <div>
+                <div>
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </div>
+                <div>
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </div>
+                <div>
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </div>
+            </div>
+        </div>
+      </section>
     </main>
+    <footer>
+        <div>
+            <div>
+                <img src="" alt="LOGO">
+                <div>
+                    <a href=""><img src="" alt="IMAGE"></a>
+                    <a href=""><img src="" alt="IMAGE"></a>
+                    <a href=""><img src="" alt="IMAGE"></a>
+                </div>
+            </div>
+            <P>TEXT</P>
+        </div>
+    </footer>
   </body>
 </html>
