css project second upload

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet" />
     <title>HTML Basics</title>
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>
       <ul>
         <li><a href="./tweets.html">Tweets</a></li>
@@ -16,13 +16,13 @@
     </header>
     <main>
       <article>
-        <h1>First Header</h1>
-        <p>First paragraph of first header</p>
+        <h1>Lorem Ipsum</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem reiciendis quam natus error cumque dicta soluta culpa laudantium nemo a impedit laboriosam nam, eum aspernatur. Nostrum corporis harum facere quam explicabo quae, quisquam sequi architecto adipisci dolorum distinctio! Quidem ex tenetur aut, harum dolorem enim asperiores exercitationem quaerat eius amet nulla quae porro eaque recusandae corporis. Quia minus, beatae exercitationem veniam nostrum accusamus illo velit. Modi quo voluptatem fugit possimus expedita, deserunt magnam voluptatum dolorum culpa neque. Nobis, commodi modi sit maxime aut iusto ea at ipsam accusamus voluptatem sequi consectetur laboriosam nam amet nulla quas eum rem. Harum dolorem laborum eveniet cum vitae eius ipsam cumque. Id exercitationem dolores quam perspiciatis aliquam eaque delectus enim itaque quasi, odio ratione voluptatum at explicabo accusantium ex quis natus illo reiciendis hic magnam commodi ut. Expedita, laborum, distinctio temporibus necessitatibus nobis voluptate quia enim accusamus, error cupiditate neque. Tempore molestiae illo nemo!</p>
         <h2>Second Header</h2>
-        <p>Paragraph for second header</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos soluta inventore placeat impedit atque obcaecati, hic sunt error nam consectetur? Eaque cum corporis, consequuntur quae ea nostrum eveniet qui, excepturi praesentium temporibus blanditiis accusamus tempora quia quasi dolorem architecto. Ipsam iusto maxime nobis, odio velit vero minus voluptatibus? Deleniti eveniet, culpa optio provident voluptas doloremque natus ea quaerat rerum esse iste? Molestiae dolores accusantium officia illum optio sequi omnis consequuntur, amet esse repudiandae dolor, at asperiores. Eligendi atque hic quos delectus fuga temporibus, iure, perspiciatis vero sapiente totam adipisci ipsam sint soluta id voluptas, molestiae aperiam voluptatum eum iste quae?</p>
         <h3>Third Header</h3>
-        <p>Third paragraph for third header</p>
-        <p>Final paragraph</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia eos architecto laborum nostrum sit, odit quae labore, accusamus voluptatum officiis repudiandae commodi asperiores similique quisquam iusto praesentium nesciunt blanditiis porro rerum. Cumque sit autem quos eligendi eum molestias impedit, vero corporis alias explicabo rem nihil quas aperiam odit nostrum qui aliquid facilis. Nemo esse pariatur consequuntur officiis ducimus molestias nisi cupiditate minus dolorem voluptates debitis doloremque beatae voluptatem atque reprehenderit provident iste numquam laborum, voluptas asperiores sit maxime architecto dicta. Ut reiciendis, accusamus fugiat at eum eius nihil dignissimos nisi explicabo non amet.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, illo debitis! Ipsum, assumenda recusandae. Quam, fugiat, incidunt vitae quaerat sunt esse error libero tempore nostrum architecto magnam modi a facere?</p>
         <img
           src="https://www.holbertonschool.com/holberton-logo.png"
           alt="holberton-logo"
