--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -17,8 +17,11 @@
     <main>
       <article>
         <h1>First Header</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto ratione obcaecati explicabo ullam. Ad, repellat quia. Beatae molestias ullam commodi, modi quibusdam nisi dolorem veritatis ipsa, necessitatibus recusandae officiis molestiae.</p>
         <h2>Second Header</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel natus quos, voluptates molestias voluptatum libero. Voluptatum, et veritatis aspernatur, deserunt ratione a numquam ab, ipsum provident quos minima nesciunt voluptas nostrum. Quibusdam, culpa? Harum laborum, natus rerum quidem tempore quod quia minus ad perspiciatis autem officia inventore voluptas! Perspiciatis, odit.</p>
         <h3>Third Header</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt tempore molestias cumque.</p>
         <blockquote class="twitter-tweet">
           <p lang="en" dir="ltr">
             Generative AI events in SF Bay area.<br /><br />Wait… I thought “SV
